// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scores Report: pie progress SVG icon renders < 50% quarters 1`] = `
<svg
  className="pie-progress due started"
  height="20"
  viewBox="0 0 24 24"
  width="20"
>
  <g
    id="q1"
  >
    <g>
      <circle
        cx="12.334"
        cy="11.583"
        fill="#DDDDDD"
        r="12"
      />
      <path
        d="M12.334,11.582h12l0,0c0-6.628-5.371-12-12-12V11.582z"
      />
    </g>
    <line
      fill="none"
      stroke="#FFFFFF"
      strokeMiterlimit="10"
      x1="12.334"
      x2="12.334"
      y1="-0.417"
      y2="23.582"
    />
    <line
      fill="none"
      stroke="#FFFFFF"
      strokeMiterlimit="10"
      x1="0.334"
      x2="24.334"
      y1="11.583"
      y2="11.583"
    />
  </g>
</svg>
`;

exports[`Scores Report: pie progress SVG icon renders 50% > 75% quarters 1`] = `
<svg
  className="pie-progress due started"
  height="20"
  viewBox="0 0 24 24"
  width="20"
>
  <g
    id="q2"
  >
    <g>
      <circle
        cx="11.566"
        cy="11.582"
        fill="#DDDDDD"
        r="12"
      />
      <path
        d="M11.566-0.417v24c6.629,0,12-5.371,12-12C23.566,4.955,18.195-0.417,11.566-0.417z"
      />
    </g>
    <line
      fill="none"
      stroke="#FFFFFF"
      strokeMiterlimit="10"
      x1="11.566"
      x2="11.566"
      y1="-0.417"
      y2="23.582"
    />
    <line
      fill="none"
      stroke="#FFFFFF"
      strokeMiterlimit="10"
      x1="-0.434"
      x2="23.566"
      y1="11.583"
      y2="11.583"
    />
  </g>
</svg>
`;

exports[`Scores Report: pie progress SVG icon renders 75% > 100% quarters 1`] = `
<svg
  className="pie-progress due started"
  height="20"
  viewBox="0 0 24 24"
  width="20"
>
  <g
    id="q3"
  >
    <g>
      <circle
        cx="11.799"
        cy="11.583"
        fill="#DDDDDD"
        r="12"
      />
      <g>
        <path
          d="M11.799-0.418v12h-12c0,6.627,5.373,12,12,12s12-5.373, 12-12C23.799,4.955,18.426-0.418,11.799-0.418z"
        />
      </g>
    </g>
    <g>
      <line
        fill="none"
        stroke="#FFFFFF"
        strokeMiterlimit="10"
        x1="11.798"
        x2="11.798"
        y1="-0.417"
        y2="23.582"
      />
      <line
        fill="none"
        stroke="#FFFFFF"
        strokeMiterlimit="10"
        x1="-0.202"
        x2="23.799"
        y1="11.583"
        y2="11.583"
      />
    </g>
  </g>
</svg>
`;

exports[`Scores Report: pie progress SVG icon renders 100% quarters 1`] = `
<svg
  className="pie-progress due started"
  height="20"
  viewBox="0 0 24 24"
  width="20"
>
  <g
    id="q4"
  >
    <circle
      cx="12.03"
      cy="11.583"
      r="12"
    />
    <g>
      <line
        fill="none"
        stroke="#FFFFFF"
        strokeMiterlimit="10"
        x1="12.03"
        x2="12.03"
        y1="-0.418"
        y2="23.582"
      />
      <line
        fill="none"
        stroke="#FFFFFF"
        strokeMiterlimit="10"
        x1="0.03"
        x2="24.03"
        y1="11.582"
        y2="11.582"
      />
    </g>
  </g>
</svg>
`;
